writen test cases for DTOs